force-app/main/default/objects/Workflow_Execution__c/Workflow_Execution__c.object-meta.xml
<CustomObject>
    <description>Tracks execution of compliance workflow templates including status, timing, and results</description>
    <label>Workflow Execution</label>
    <nameField>
        <displayFormat>WE-{0000000}</displayFormat>
        <label>Workflow Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>