force-app/main/default/objects/Workflow_Execution__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <description>When the workflow execution completed</description>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>