force-app/main/default/objects/Workflow_Execution__c/fields/Compliance_Score__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Score__c</fullName>
    <description>Calculated compliance score (0-100) for this execution</description>
    <label>Compliance Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>