force-app/main/default/objects/Workflow_Execution__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <description>Compliance framework for this execution</description>
    <label>Framework</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>