force-app/main/default/objects/Workflow_Execution__c/fields/Rules_Failed__c.field-meta.xml
<CustomField>
    <fullName>Rules_Failed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of rules that failed evaluation</description>
    <label>Rules Failed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>