force-app/main/default/objects/Workflow_Execution__c/fields/Rules_Passed__c.field-meta.xml
<CustomField>
    <fullName>Rules_Passed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of rules that passed evaluation</description>
    <label>Rules Passed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>