force-app/main/default/objects/Workflow_Execution__c/fields/Started_At__c.field-meta.xml
<CustomField>
    <fullName>Started_At__c</fullName>
    <description>When the workflow execution started</description>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>