force-app/main/default/objects/Workflow_Execution__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current execution status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>PENDING</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>RUNNING</fullName><default>false</default><label>Running</label></value>
            <value><fullName>COMPLETED</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>FAILED</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>CANCELLED</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>