force-app/main/default/objects/Workflow_Execution__c/fields/Total_Rules__c.field-meta.xml
<CustomField>
    <fullName>Total_Rules__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of rules evaluated in this workflow</description>
    <label>Total Rules</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>